--- a/src/java/org/mypackage/controllers/web/WEB-INF/web.xml
+++ b/src/java/org/mypackage/controllers/web/WEB-INF/web.xml
@@ -40,6 +40,10 @@
         <servlet-name>CreateClassServlet</servlet-name>
         <servlet-class>org.mypackage.controllers.CreateClassServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>JoinClassServlet</servlet-name>
+        <servlet-class>org.mypackage.controllers.JoinClassServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>StudentServlet</servlet-name>
         <url-pattern>/StudentServlet</url-pattern>
@@ -79,6 +83,10 @@
     <servlet-mapping>
         <servlet-name>CreateClassServlet</servlet-name>
         <url-pattern>/CreateClassServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>JoinClassServlet</servlet-name>
+        <url-pattern>/JoinClassServlet</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
