--- a/src/java/org/mypackage/controllers/web/WEB-INF/web.xml
+++ b/src/java/org/mypackage/controllers/web/WEB-INF/web.xml
@@ -48,6 +48,10 @@
         <servlet-name>DeleteClassServlet</servlet-name>
         <servlet-class>org.mypackage.controllers.DeleteClassServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>QuestionServlet</servlet-name>
+        <servlet-class>org.mypackage.controllers.QuestionServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>StudentServlet</servlet-name>
         <url-pattern>/StudentServlet</url-pattern>
@@ -95,6 +99,10 @@
     <servlet-mapping>
         <servlet-name>DeleteClassServlet</servlet-name>
         <url-pattern>/DeleteClassServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>QuestionServlet</servlet-name>
+        <url-pattern>/QuestionServlet</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
