Made the leave class servlet

--- a/src/java/org/mypackage/controllers/web/WEB-INF/web.xml
+++ b/src/java/org/mypackage/controllers/web/WEB-INF/web.xml
@@ -56,6 +56,10 @@
         <servlet-name>deleteQuestion</servlet-name>
         <servlet-class>org.mypackage.controllers.deleteQuestion</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>LeaveClassServlet</servlet-name>
+        <servlet-class>org.mypackage.controllers.LeaveClassServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>StudentServlet</servlet-name>
         <url-pattern>/StudentServlet</url-pattern>
@@ -111,6 +115,10 @@
     <servlet-mapping>
         <servlet-name>deleteQuestion</servlet-name>
         <url-pattern>/deleteQuestion</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>LeaveClassServlet</servlet-name>
+        <url-pattern>/LeaveClassServlet</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
